[gd_scene load_steps=4 format=3 uid="uid://baix28qdvdqpb"]

[ext_resource type="Texture2D" uid="uid://dfxiee0lhwy1r" path="res://Sprites/icon.svg" id="1_nutbp"]
[ext_resource type="Texture2D" uid="uid://4smpypgd11tk" path="res://Sprites/Battle/white-block.png" id="2_5m07l"]
[ext_resource type="Script" path="res://Battle/move_button.gd" id="2_s8l37"]

[node name="MoveButton" type="TextureButton"]
custom_minimum_size = Vector2(40, 40)
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("1_nutbp")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_s8l37")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
step = 0.05
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("2_5m07l")
tint_progress = Color(0.156863, 0.156863, 0.156863, 0.905882)

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Time" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
horizontal_alignment = 2
vertical_alignment = 2

[node name="Key" type="Label" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8

[node name="Info" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.0
offset_top = -32.0
offset_right = 35.0
offset_bottom = -8.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "Move Name"
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
